--- a/config/assets.yml
+++ b/config/assets.yml
@@ -22,6 +22,8 @@ javascripts:
         - public/javascripts/views/*.js
         - public/javascripts/models/*.js
         - public/javascripts/collections/*.js
+        - public/javascripts/jquery.form.2.67.js
+        - public/javascripts/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.js
 
 stylesheets:
     common:
